<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Peng Wan <phylame@163.com>
  ~
  ~ This file is part of Jem.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_new"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/action_new_dir"
            app:showAsAction="ifRoom"/>
    <item
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/action_sort_by"
            app:showAsAction="ifRoom">
        <menu>
            <item
                    android:id="@+id/action_by_name"
                    android:title="@string/action_by_name"/>
            <item
                    android:id="@+id/action_by_type"
                    android:title="@string/action_by_type"/>
            <item
                    android:id="@+id/action_by_size"
                    android:title="@string/action_by_size"/>
            <item
                    android:id="@+id/action_by_size_desc"
                    android:title="@string/action_by_size_desc"/>
            <item
                    android:id="@+id/action_by_date"
                    android:title="@string/action_by_date"/>
            <item
                    android:id="@+id/action_by_date_desc"
                    android:title="@string/action_by_date_desc"/>
        </menu>
    </item>
    <item
            android:id="@+id/action_hidden"
            android:checkable="true"
            android:title="@string/action_show_hidden"/>
</menu>
